--- a/styles.css
+++ b/styles.css
@@ -9,5 +9,13 @@ body {
   width: 500px;
   max-width: 500px;
   height: 200px;
-  max-height: 200px; 
+  max-height: 200px;
+}
+
+.Message {
+
+}
+
+.Links {
+
 }
