--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,12 @@ body {
   border: 1px solid;
   width: 500px;
   max-width: 500px;
-  height: 200px;
-  max-height: 200px;
+  height: 350px;
+  max-height: 350px;
   position: relative;
-  top: 200px;
+  top: 50px;
   left: 50%;
+  text-align: center;
 }
 
 .Error {
