--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
 }
 
 .Container {
-  border: 1px solid;
   width: 500px;
   max-width: 500px;
   height: 350px;
@@ -17,13 +16,36 @@ body {
 }
 
 .Error {
-  border: 1px solid;
+
 }
 .Message {
-  border: 1px solid;
+  border: 4px solid darkblue;
+  border-radius: 25px;
   font-size: 28px;
+  font-family: sans-serif;
+  color: darkblue;
+}
+
+.Linktext {
+  font-size: 20px;
+  font-family: sans-serif;
+  color: darkblue;
 }
 
 .Links {
-  border: 1px solid;
+}
+
+.button {
+  color: darkblue;
+  font-family: sans-serif;
+  font-size: 18px;
+  border: 3px solid blue;
+  border-radius: 30px;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+}
+.button:hover {
+  background-color: blue;
+  color: white;
 }
