--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@ body {
 }
 
 .Container {
-  width: 500px;
-  max-width: 500px;
-  height: 350px;
-  max-height: 350px;
+  width: 400px;
+  max-width: 400px;
+  height: 100px;
+  max-height: 100px;
   position: relative;
   left: 50%;
   text-align: center;
@@ -16,22 +16,27 @@ body {
 
 .Error {
 }
+
+img {
+  height: 150px; 
+}
+
 .Message {
   border: 4px solid darkblue;
   border-radius: 25px;
-  font-size: 28px;
+  font-size: 24px;
   font-family: sans-serif;
   color: darkblue;
 }
 
 .Linktext {
-  font-size: 20px;
+  font-size: 16px;
   font-family: sans-serif;
   color: darkblue;
 }
 
 .Links {
-  font-size: 20px;
+  font-size: 16px;
   font-family: sans-serif;
   color: darkblue;
 }
@@ -39,7 +44,7 @@ body {
 .button {
   color: darkblue;
   font-family: sans-serif;
-  font-size: 18px;
+  font-size: 14px;
   border: 3px solid blue;
   border-radius: 30px;
   padding: 15px 32px;
