--- a/styles.css
+++ b/styles.css
@@ -55,11 +55,11 @@ img {
 .button:hover {
   background-color: blue;
   color: white;
-  animation-name: example;
+  animation-name: colourchange;
   animation-duration: 2s;
 }
 
-@-webkit-keyframes example {
+@-webkit-keyframes colourchange {
   0%   {background-color: red;}
   25%  {background-color: yellow;}
   50%  {background-color: green;}
